Substitute jakarta.activation-api with jakarta.activation.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>